crates/rome_formatter/tests/specs/prettier/js/decorators/redux.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: redux.js

---
# Input
```js
@connect(mapStateToProps, mapDispatchToProps)
export class MyApp extends React.Component {}

@connect(state => ({ todos: state.todos }))
export class Home extends React.Component {}

```

# Output
```js
@connect(mapStateToProps, mapDispatchToProps)
export class MyApp extends React.Component {}



@connect(state => (
{
  todos: state.todos;
}
))
export class Home extends React.Component {}

```

# Errors
```
error[SyntaxError]: expected a statement but instead found '@connect(mapStateToProps, mapDispatchToProps)'
  ┌─ redux.js:1:1
  │
1 │ @connect(mapStateToProps, mapDispatchToProps)
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '@connect(state => ('
  ┌─ redux.js:4:1
  │
4 │ @connect(state => ({ todos: state.todos }))
  │ ^^^^^^^^^^^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found '))'
  ┌─ redux.js:4:42
  │
4 │ @connect(state => ({ todos: state.todos }))
  │                                          ^^ Expected a statement here


```


